# ifood-orders-bot

./: README.md  loader.py  pyproject.toml  react_agent_rag.py  simple_rag.py  slm_simple.py
orders/: order001.json  order002.json  order_001.csv
