[tool.poetry]
name = "ifood-orders-bot"
version = "0.1.0"
description = ""
authors = ["Andre Vinicius <andrevini.neves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index-llms-ollama = "^0.1.5"
llama-index = "^0.10.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
